--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
  		<plugins>
 
  			<!-- invoke testng.xml file -->
- 			<plugin>
+			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-surefire-plugin</artifactId>
  				<version>2.5</version>  
@@ -140,6 +140,18 @@
         				</suiteXmlFiles>  
     				</configuration> 
  			</plugin>
+ 			<plugin>
+ 				<groupId>org.apache.maven.plugins</groupId>
+ 				<artifactId>maven-surefire-plugin</artifactId>
+ 					<dependencies>
+ 						<dependency>
+						    <groupId>org.apache.maven.surefire</groupId>
+						    <artifactId>surefire-testng</artifactId>
+						    <version>2.19.1</version>
+						</dependency>
+ 					</dependencies>
+ 			</plugin>
+
  			
  			<!-- avoid gbk mapping encoding problem -->
  			<plugin>
